projects, app server, improvements, cleanups and HTTP
- ADD: file syncer win forms project
- ADD: SetupForJson(), WriteJavaScript() and WriteJson() methods for
IHttpResponse interface
- ADD: http modules are resource locators now
- CHG: code cleanups
- ADD: DebuggerStepThrough attributes
- ADD: automatic loading/emedding of javascript code for modules
- UPD: design of application server web interface

--- a/Projects/MarcelJoachimKloubert.ApplicationServer/MarcelJoachimKloubert.ApplicationServer/Resources/Web/html/__header.html
+++ b/Projects/MarcelJoachimKloubert.ApplicationServer/MarcelJoachimKloubert.ApplicationServer/Resources/Web/html/__header.html
@@ -19,12 +19,13 @@
         <script language="javascript" type="text/javascript" src="/js/jquery/jquery-1.9.1.js"></script>
         <script language="javascript" type="text/javascript" src="/js/jquery/jquery-ui-1.10.3.custom.min.js"></script>
         <script language="javascript" type="text/javascript" src="/js/jquery/jquery-ui-timepicker-1.0.5.js"></script>
+        
+        <script language="javascript" type="text/javascript" src="/js/main.js"></script>
 
         <script type="text/javascript">
-            $(document).ready(
-                function() {
-                    $('button, input[type=button], input[type=submit]').button();
-                });			
+            $(document).ready(function () {
+                $('button, input[type=button], input[type=submit]').button();
+            });
         </script>
     </head>
  
@@ -32,7 +33,9 @@
         <div id="overallHeader">
             <div class="top">
                 <div class="menu">
-                    <a href="/" class="home">Startseite</a>
+                    <a href="/" class="home">Home</a>
+
+                    <a href="/users.html" class="manageUsers">Users</a>
                 </div>
                             
                 <div class="header">
@@ -47,7 +50,7 @@
             </div>
  
             <div class="menu">
-
+                <ul id="mainMenuEntries"></ul>
             </div>
         </div>
  
